templates/bots-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robomotion-bots-proxy
  annotations:
    kubernetes.io/ingress.class: "public"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - 'enerjisa.robomotion.com'
    secretName: wildcard-robomotion-letsencrypt
  rules:
  - host: enerjisa.robomotion.com
    http:
      paths:
      - path: /_bots
        pathType: Prefix
        backend:
          service:
            name: robomotion-bots-proxy
            port: 
              number: 80
